# bozochat

./: .env.example  .gitignore  PROJECT_STATUS.md  QUICKSTART.md  README.md  build-client.bat  package-lock.json  package.json  start-bot.bat  start-client-dev.bat
.claude/: settings.local.json
src/bot/: index.js
src/client/: main.js  preload.js
src/client-rust/: Cargo.toml
src/client-rust/src/: config.rs  main.rs  overlay.rs  settings.rs  tray.rs  websocket.rs
src/client/renderer/: overlay.html  settings.html
