[package]
name = "bozochat-client"
version = "0.1.0"
edition = "2021"
description = "BozoChat Rust client — system tray overlay notifier"

[dependencies]
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26" }
tungstenite       = { version = "0.26" }
futures-util      = { version = "0.3", default-features = false, features = ["sink", "io"] }
serde             = { version = "1.0", features = ["derive"] }
serde_json        = { version = "1.0" }
dirs              = { version = "5" }
log               = { version = "0.4" }
env_logger        = { version = "0.11" }

# ── Phase 3 : Overlay window ───────────────────────────────────────────────
wry               = { version = "0.54" }
winit             = { version = "0.30" }
raw-window-handle = { version = "0.6" }

# ── Phase 4 : System tray ──────────────────────────────────────────────────
tray-icon = { version = "0.21" }
muda      = { version = "0.17" }
ico       = { version = "0.3" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
